# bentoclient

./: .gitignore  CMakeLists.txt  README.md  apputils.cpp  license.md
apps/: CMakeLists.txt  bentohistchains.cpp
data/: TSY.2025-06-06.csv
docker/: Dockerfile  run_me_to_build_in_container.sh
docs/: CMakeLists.txt  Doxyfile.in  mainpage.md
include/bentoclient/: apputils.hpp  bentoserializer.hpp  clienttypes.hpp  csvfromoptionchain.hpp  datagrid.hpp  dateutils.hpp  getter.hpp  getterasynchronous.hpp  gettersynchronous.hpp  logging.hpp  marketenvironment.hpp  marketenvironmentextended.hpp  optionchain.hpp  optioninstruments.hpp  optionrecordgapfiller.hpp  osioption.hpp  persister.hpp  persistercsv.hpp  requester.hpp  requesterasynchronous.hpp  requestersynchronous.hpp  retriever.hpp  retrieverinmemory.hpp  retry.hpp  signalhandler.hpp  threadpool.hpp  variadicthreadpool.hpp
scripts/: getkey.sh  tsy2csv.pl
src/: CMakeLists.txt  apputils.cpp  clienttypes.cpp  csvfromoptionchain.cpp  datagrid.cpp  dateutils.cpp  getter.cpp  getterasynchronous.cpp  gettersynchronous.cpp  logging.cpp  marketenvironmentextended.cpp  optionchain.cpp  optioninstruments.cpp  optionrecordgapfiller.cpp  osioption.cpp  persister.cpp  persistercsv.cpp  requester.cpp  requesterasynchronous.cpp  requestersynchronous.cpp  retriever.cpp  retrieverinmemory.cpp  retry.cpp  signalhandler.cpp  threadpool.cpp
tests/: CMakeLists.txt  dataloader.cpp  dataloader.hpp  persistercsvinterceptor.cpp  persistercsvinterceptor.hpp  testcsvfromoptionchain.cpp  testdatagrid.cpp  testgetterasynchronous.cpp  testmarketenvironmentextended.cpp  testoptionchain.cpp  testoptioninstruments.cpp  testoptionrecordgapfiller.cpp  testosioption.cpp  testpersistercsv.cpp  testrequestersynchronous.cpp  testretrieverinmemory.cpp  testthreadpool.cpp  testvariadicthreadpool.cpp
tests/data/: BNO_cbboMap_2025-04-28_exp_2025-05-16.txt  BNO_symbologyResolution_2025-04-28.txt  QQQ_cbboMap_2025-04-28_exp_2025-04-28.txt  QQQ_cbboMap_2025-04-28_exp_2025-04-29.txt  QQQ_cbboMap_2025-04-28_exp_2025-04-30.txt  QQQ_cbboMap_2025-04-28_exp_2025-05-01.txt  QQQ_symbologyResolution_2025-04-28.txt  SPY_cbbos_2025-04-02_17-30.txt  SPY_symbology_2024-06-10.txt  SPY_symbology_2025-04-02.txt  SPY_tradeMsg_2024-06-10_17-30.txt  SPY_trades_2025-04-02_17-30.txt
